@@ -1294,6 +1294,12 @@
 		<a href="#about-getrightpadding">get right padding (handle)</a><br>
 		
 	
+		<a href="#about-getscreenheight">get screen height</a><br>
+		
+	
+		<a href="#about-getscreenwidth">get screen width</a><br>
+		
+	
 		<a href="#about-getscriptname">get script name (string id, script id)</a><br>
 		
 	
@@ -16266,6 +16272,32 @@ set timer (0, 300, 18, timer: game over, 0, (timerflag: battle, or, timerflag: m
 </div>
 		</p>
 </div>
+		<div class="command">
+<a name="about-getscreenwidth"></a>
+		<h4>get screen width</h4>
+<p>
+			
+				Returns the width of the screen in pixels.
+			
+			
+			
+			<div class="seealso">See also: <ul><li><a href="#about-getscreenheight" class="ref">get screen height</a></li></ul>
+</div>
+		</p>
+</div>
+		<div class="command">
+<a name="about-getscreenheight"></a>
+		<h4>get screen height</h4>
+<p>
+			
+				Returns the height of the screen in pixels.
+			
+			
+			
+			<div class="seealso">See also: <ul><li><a href="#about-getscreenwidth" class="ref">get screen width</a></li></ul>
+</div>
+		</p>
+</div>
 		<hr>
 		</div>
 		<div class="subsection">
@@ -17601,7 +17633,7 @@ assert (check tag (tag:initialised) == OFF)  # something ought to be true at thi
 			</div>
 		<hr>
 		</div>
-<p>Stats: There are 797 commands and 75 constants in this file, of which 58 are only references to other entries.</p>
+<p>Stats: There are 799 commands and 75 constants in this file, of which 58 are only references to other entries.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
