@@ -664,6 +664,9 @@ define function, begin
 640,overlayissuspended,0      # return true if "suspend overlay" is active
 641,mapmusicissuspended,0     # return true if "suspend map music" is active
 642,timersaresuspended,0      # return true if "suspend timers" is active
+643,getscreenwidth,0          # return the x resolution of the screen
+644,getscreenheight,0         # return the y resolution of the screen
+645,setscreenresolution,2,0,0 # change the x,y resolution of the screen
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
